--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "backend-todo-crud",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha tests/*.js --exit",
+    "start": "node controllers/server.js"
   },
   "keywords": [],
   "author": "",
@@ -14,5 +15,10 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.6.6"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.2.0",
+    "supertest": "^4.0.2"
   }
 }
